# Wobble

./: .gitignore  .releaserc.json  CONTRIBUTING.md  README.md  TEMPLATE_USAGE.md  discovery.json  discovery_test.txt  package-lock.json  package.json  pyproject.toml
.github/workflows/: commitlint.yml  semantic-release.yml
docs/: CHANGELOG.md
docs/articles/: index.md
docs/articles/appendices/: glossary.md  migration.md
docs/articles/devs/architecture/: Overview.md
docs/articles/devs/contribution_guidelines/: Contributing.md  DevelopmentSetup.md
docs/articles/users/: CLIReference.md  GettingStarted.md  IntegrationGuide.md  TestOrganization.md
tests/: test_basic.py  test_core_integration.py  test_data_structures.py  test_data_utils.py  test_enhanced_output.py  test_file_format_compliance.py  test_output_architecture.py  test_wobble_cli.py  test_wobble_discovery.py  test_wobble_output.py  test_wobble_runner.py
wobble/: __init__.py  cli.py  data_structures.py  decorators.py  discovery.py  enhanced_output.py  file_io.py  output.py  output_architecture.py  runner.py
{{PACKAGE_NAME}}/: __init__.py  core.py
